# pushtotype

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  claude.md  dogfood_test.md  main.py  project-plan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
learnings/: xclip_injection_fix.md
memory/: MEMORY.md  project_efficiency_benchmark.md
src/pushtotype/: audio.py  cli.py  config.py  daemon.py  feedback.py  hotkey.py  injector.py  transcriber.py
src/whisperflow/: __main__.py  cli.py  daemon.py  feedback.py  hotkey.py  injector.py  session.py  transcriber.py
tasks/: M0_PROJECT_SETUP.md  M1_AUDIO_TRANSCRIPTION.md  M2_HOTKEY_PUSH_TO_TALK.md  M3_TEXT_INJECTION.md  M4_CONFIG_POLISH.md  M5_DISTRIBUTION_DOCS.md
tests/: test_audio.py  test_config.py  test_feedback.py  test_hotkey.py  test_injector.py  test_session.py  test_smoke.py  test_transcriber.py
