[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisperflow"
version = "0.1.0"
description = "Real-time speech-to-text for Linux that types anywhere"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[project.scripts]
whisperflow = "whisperflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whisperflow"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
