[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pushtotype"
version = "0.1.0"
description = "Real-time speech-to-text for Linux. Hold a hotkey, speak, release — your words appear wherever your cursor is."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Daniel Graviet", email = "dtgraviet@gmail.com" }]
keywords = ["whisper", "speech-to-text", "linux", "transcription", "voice-typing", "push-to-talk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "click>=8.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "faster-whisper>=1.0.0",
    "evdev>=1.6.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/danielgraviet/pushtotype"
Repository = "https://github.com/danielgraviet/pushtotype"
Issues = "https://github.com/danielgraviet/pushtotype/issues"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[project.scripts]
pushtotype = "pushtotype.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pushtotype"]
artifacts = ["src/pushtotype/sounds/*.wav"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
